--- a/client/client_project/package.json
+++ b/client/client_project/package.json
@@ -53,6 +53,7 @@
     "rimraf": "^2.6.2",
     "script-ext-html-webpack-plugin": "^1.8.5",
     "vue-loader": "^12.2.0",
+    "vue-server-renderer": "^2.5.17",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.11",
     "webpack": "^3.10.0",
