--- a/client/client_project/package.json
+++ b/client/client_project/package.json
@@ -45,6 +45,7 @@
     "html-webpack-plugin": "^2.30.1",
     "ip": "^1.1.5",
     "node-notifier": "^5.1.2",
+    "ora": "^3.0.0",
     "portfinder": "^1.0.13",
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.9",
@@ -52,6 +53,7 @@
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
     "script-ext-html-webpack-plugin": "^1.8.5",
+    "shelljs": "^0.8.2",
     "vue-loader": "^12.2.0",
     "vue-server-renderer": "^2.5.17",
     "vue-style-loader": "^3.0.3",
