--- a/client/client_project/package.json
+++ b/client/client_project/package.json
@@ -35,15 +35,23 @@
     "autoprefixer": "^8.0.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.1",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.1.2",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.28.8",
+    "eslint-friendly-formatter": "^4.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "fs-extra": "^5.0.0",
     "glob": "^7.1.2",
     "html-webpack-plugin": "^2.30.1",
     "ip": "^1.1.5",
+    "jsdom": "^12.0.0",
     "node-notifier": "^5.1.2",
     "ora": "^3.0.0",
     "portfinder": "^1.0.13",
@@ -54,6 +62,7 @@
     "rimraf": "^2.6.2",
     "script-ext-html-webpack-plugin": "^1.8.5",
     "shelljs": "^0.8.2",
+    "sw-precache-webpack-plugin": "^0.11.5",
     "vue-loader": "^12.2.0",
     "vue-server-renderer": "^2.5.17",
     "vue-style-loader": "^3.0.3",
@@ -61,6 +70,8 @@
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.9.7",
     "webpack-merge": "^4.1.0",
+    "webpack-node-externals": "^1.7.2",
+    "webpack-parallel-uglify-plugin": "^1.1.0",
     "webpack-uglify-parallel": "^0.1.4",
     "weex-loader": "^0.7.2",
     "weex-vue-precompiler": "^0.1.17"
