--- a/client/client_project/package.json
+++ b/client/client_project/package.json
@@ -29,7 +29,7 @@
   "dependencies": {
     "phantom-limb": "0.0.1",
     "vue": "^2.5.11",
-    "weex-vue-render": "^1.0.17"
+    "weex-vue-render": "^1.0.30"
   },
   "devDependencies": {
     "autoprefixer": "^8.0.0",
@@ -50,6 +50,7 @@
     "fs-extra": "^5.0.0",
     "glob": "^7.1.2",
     "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin-for-multihtml": "^2.30.2",
     "ip": "^1.1.5",
     "jsdom": "^12.0.0",
     "node-notifier": "^5.1.2",
