--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,10 @@
     "android": "weex run android",
     "pack:ios": "npm run clean:ios && weex build ios",
     "pack:android": "npm run clean:android && weex build android",
-    "pack:web": "npm run clean:web && npm run build:prod:web"
+    "pack:web": "npm run clean:web && npm run build:prod:web",
+    "ssr:pack": "node configs_web/build/build",
+    "ssr:dev": "npm run ssr:pack",
+    "ssr:build": "cross-env NODE_ENV=production npm run ssr:pack"
   },
   "keywords": [
     "weex"
@@ -31,6 +34,7 @@
     "vue": "^2.5.11"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
     "autoprefixer": "^8.6.5",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.1",
@@ -78,6 +82,7 @@
     "webpack-uglify-parallel": "^0.1.4",
     "weex-loader": "^0.7.2",
     "weex-vue-precompiler": "^0.1.17",
-    "weex-vue-render": "^1.0.30"
+    "weex-vue-render": "^1.0.30",
+    "weex-vue-s-render": "^1.0.0"
   }
 }
