--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "vuex-router-sync": "^5.0.0",
-    "weex-vue-render": "../../../weex/weex-vue-render"
+    "weex-vue-s-render": "^1.0.1-1"
   },
   "lint-staged": {
     "**/*.js": [
